--- a/scss/slyle.scss
+++ b/scss/slyle.scss
@@ -1,21 +1,3 @@
-$bgmain: #f5f5f5;
+// Подключение файла scss с переменными
+@import "./variables";
 
-body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-}
-
-.hblock {
-    background-color: $bgmain;
-    display: flex;
-
-    &-menu {
-        list-style: none;
-        display: flex;
-        
-        &-li {
-            color: red;
-        }
-    }
-}
