Добавление всех елентов шапки на страницу 1. Добавление текста для меню 2. Добавление картинки для логотипа + svg-картинка для кнопки изменения    цвета 3. Пропись стилей для размера экрана 1440px

--- a/css/slyle.css
+++ b/css/slyle.css
@@ -4,10 +4,12 @@
 /* Обёртки - отдельный блок */
 .wrapper {
   /*Максимальная ширина страницы и выравнивание содержимого по центру*/
+  width: 1440px;
   margin: 0 auto;
   /* Обёртка для прижатия подвала к нижней части */
 }
 .wrapper-container {
+  padding: 0 159px;
   box-sizing: border-box;
 }
 .wrapper-forcontent {
