--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,12 +5,13 @@
 /* Обёртки - отдельный блок */
 .wrapper{
     /*Максимальная ширина страницы и выравнивание содержимого по центру*/
-    //max-width: 1440px;
+    width: 1440px;
+    // Выравнивание страницы по центру
     margin: 0 auto;
 
     //Отступы по краям
     &-container {
-        //padding: 0 120px;
+        padding: 0 159px;
         box-sizing: border-box;
     }
     
