Стилизация блока меню 1. Стилизация и выравнивание блока меню 2. Подключение файла normalize.css для нормализации всех блоков на    разных браузерах

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,8 @@
 /* Переменные (через $) */
-
+$logo-color: #173a56;
+$main-color: #22343d;
+$border-btn: #bcd0e5;
+$bg-active-btn: #02897a;
 
 /* === wrapper === */
 /* Обёртки - отдельный блок */
