--- a/css/slyle.css
+++ b/css/slyle.css
@@ -25,4 +25,81 @@
   flex-grow: 1; /* Отношение блоков */
 }
 
-/* end === content-without-footer === end *//*# sourceMappingURL=slyle.css.map */
+/* end === content-without-footer === end */
+.header {
+  display: flex;
+  padding: 25px 0;
+}
+.header-logo {
+  text-decoration: none;
+  display: flex;
+}
+.header-logo-img {
+  width: 40px;
+  height: 40px;
+}
+.header-logo-text {
+  display: block;
+  align-self: center;
+  color: #173a56;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 28px;
+  margin-left: 16px;
+  margin-right: 237px;
+}
+.header-menu {
+  display: flex;
+  list-style-type: none;
+}
+.header-menu-li {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #22343d;
+  margin-right: 25px;
+  width: 64px;
+  text-align: center;
+  align-self: center;
+}
+.header-menu-li-btn {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  background-color: white;
+  border: 1px solid #bcd0e5;
+  border-radius: 4px;
+  padding: 10px 25px;
+  box-sizing: border-box;
+}
+.header-menu-li-btn:hover {
+  background-color: #02897a;
+  color: #ffffff;
+}
+.header-menu-li-light {
+  width: 32px;
+  height: 32px;
+  background-color: #f3f3f3;
+  border-radius: 100%;
+  border: 1px solid #f3f3f3;
+  position: relative;
+}
+.header-menu-li-light-svg {
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  fill: #02897a;
+}
+.header-menu-li:nth-child(5) {
+  width: auto;
+}
+.header-menu-li:nth-child(6) {
+  width: auto;
+}
+.header-menu-li:last-child {
+  width: auto;
+  margin-right: 0;
+}
+.header-menu-li:hover {
+  font-weight: 600;
+}/*# sourceMappingURL=slyle.css.map */
