--- a/scss/slyle.scss
+++ b/scss/slyle.scss
@@ -39,6 +39,8 @@
             width: 64px;
             text-align: center;
             align-self: center;
+            cursor: pointer;
+            transition: font-weight 0.1s ease;
 
             &-btn {
                 font-weight: 600;
@@ -49,10 +51,17 @@
                 border-radius: 4px;
                 padding: 10px 25px;
                 box-sizing: border-box;
+                transition: background-color 0.8s ease,
+                        color 0.8s ease;
 
                 &:hover {
                     background-color: $bg-active-btn;
                     color: #ffffff;
+                }
+
+                &:active {
+                    background-color: red;
+                    color: black;
                 }
             }
 
@@ -73,6 +82,25 @@
                     top: 3px;
                     left: 3px;
                     fill: $bg-active-btn;
+                    transition: background-color 0.8s ease,
+                        fill 0.8s ease;
+                }
+
+                // Анимация кнопки переключения цвета
+                &:hover {
+                    background-color: $bg-active-btn;
+
+                    & > .header-menu-li-light-svg {
+                        fill: #f3f3f3;
+                    }
+                }
+
+                &:active {
+                    background-color: red;
+
+                    & > .header-menu-li-light-svg {
+                        fill: black;
+                    }
                 }
             }
 
