стилизовали элементы первой секции

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,6 +3,7 @@ $logo-color: #173a56;
 $main-color: #22343d;
 $border-btn: #bcd0e5;
 $bg-active-btn: #02897a;
+$color-white: #FFFFFF;
 
 /* === wrapper === */
 /* Обёртки - отдельный блок */
